--- a/web_eprotal/myclass-class.html
+++ b/web_eprotal/myclass-class.html
@@ -41,12 +41,12 @@
           <a class="nav-link" href="#">Kết quả học tập</a>
         </li>
       </ul>
-    </div>
+    </div>s
   </nav>
 
   <div class="container" style="margin-top:30px">
     <div class="content">
-        
+        <img src="images/images.png">
     </div>
   </div>
   <div class="jumbotron text-center">
